<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="software.experiment.qrcode.login.SignupActivity" >

    <TextView
        android:id="@+id/text_label_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_orange"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/label_signup"
        android:textColor="#f000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="10dp" />

    <RelativeLayout
        android:id="@+id/container_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/text_label_signup"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/text_signup_id"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:background="@drawable/round_orange"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_id"
            android:textColor="#f000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_signup_pw"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_signup_id"
            android:layout_margin="10dp"
            android:background="@drawable/round_orange"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_pw"
            android:textColor="#f000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_signup_pw_check"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_signup_pw"
            android:layout_margin="10dp"
            android:background="@drawable/round_orange"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_pw_check"
            android:textColor="#f000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_signup_email"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_signup_pw_check"
            android:layout_margin="10dp"
            android:background="@drawable/round_orange"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_email"
            android:textColor="#f000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_signup_phone"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_signup_email"
            android:layout_margin="10dp"
            android:background="@drawable/round_orange"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_phone"
            android:textColor="#f000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_signup_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/text_signup_id"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/text_signup_id"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/text_signup_id"
            android:layout_toRightOf="@id/text_signup_id"
            android:background="@drawable/round_white"
            android:hint="@string/edit_hint_id"
            android:inputType="textNoSuggestions"
            android:padding="10dp"
            android:textColor="#f000"
            android:textColorHint="#7000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_signup_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/text_signup_pw"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/text_signup_pw"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/text_signup_pw"
            android:layout_toRightOf="@id/text_signup_pw"
            android:background="@drawable/round_white"
            android:hint="@string/edit_hint_pw"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#f000"
            android:textColorHint="#7000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_signup_pw_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/text_signup_pw_check"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/text_signup_pw_check"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/text_signup_pw_check"
            android:layout_toRightOf="@id/text_signup_pw_check"
            android:background="@drawable/round_white"
            android:hint="@string/edit_hint_pw_check"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#f000"
            android:textColorHint="#7000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/text_signup_email"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/text_signup_email"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/text_signup_email"
            android:layout_toRightOf="@id/text_signup_email"
            android:background="@drawable/round_white"
            android:hint="@string/edit_hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#f000"
            android:textColorHint="#7000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/text_signup_phone"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/text_signup_phone"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/text_signup_phone"
            android:layout_toRightOf="@id/text_signup_phone"
            android:background="@drawable/round_white"
            android:hint="@string/edit_hint_phone"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="#f000"
            android:textColorHint="#7000"
            android:textSize="15sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_signup_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_red"
        android:layout_below="@id/container_form"
        android:layout_alignParentBottom="true"
        android:text="@string/button_confirm"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="10dp" />

</RelativeLayout>