<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="software.experiment.qrcode.login.LoginActivity" >

    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:src="@drawable/logo"
            android:padding="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            />

        <TextView
            android:id="@+id/text_label_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_orange"
            android:padding="15dp"
            android:text="@string/label_login"
            android:gravity="center"
            android:textColor="#f000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/image_logo"
            android:layout_margin="10dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/topPanel">

        <TextView
            android:id="@+id/text_login_id"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:background="@drawable/round_orange"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_id"
            android:textColor="#f000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_login_pw"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_login_id"
            android:layout_margin="10dp"
            android:background="@drawable/round_orange"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_pw"
            android:textColor="#f000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/text_login_id"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/text_login_id"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/text_login_id"
            android:layout_toRightOf="@id/text_login_id"
            android:background="@drawable/round_white"
            android:hint="@string/edit_hint_id"
            android:inputType="textNoSuggestions"
            android:padding="10dp"
            android:textColor="#f000"
            android:textColorHint="#7000"
            android:textSize="15sp" >
        </EditText>

        <EditText
            android:id="@+id/edit_login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/text_login_pw"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/text_login_pw"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/text_login_pw"
            android:layout_toRightOf="@id/text_login_pw"
            android:background="@drawable/round_white"
            android:hint="@string/edit_hint_pw"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#f000"
            android:textColorHint="#7000"
            android:textSize="15sp" />
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/bar_login_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_form"
        android:layout_marginTop="10dp"
        style="@android:attr/buttonBarStyle" >
        
    <Button
        android:id="@+id/button_login_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_red"
        android:padding="10dp"
        android:text="@string/label_signup"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        style="@android:attr/buttonBarButtonStyle" />
    
    
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_red"
        android:padding="10dp"
        android:text="@string/label_login"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:layout_weight="1"
        android:layout_margin="5dp"
        style="@android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</RelativeLayout>